# Deep-Packet-Inspection

./: .gitignore  CMakeLists.txt  README.md  project_summary.md
.cache/clangd/index/: dns_parser.cpp.2207484B9C1D7CBD.idx  dns_parser.h.52D484BE7DC7D8D4.idx  http_parser.cpp.F52A538AD369AE9E.idx  http_parser.h.2A6309545089878A.idx  logger.h.9A0FFD2F96C03875.idx  main.cpp.34429A94ED4A8D50.idx  packet_capture.cpp.FB73C9BF4902B5ED.idx  packet_capture.h.5AE799445CC997D9.idx  packet_parser.cpp.2B0ED3EDBFA268E2.idx  packet_parser.h.0A8928CDA8E686D7.idx  policy_engine.h.53D8CCE4A437CA0D.idx  protocols.h.0C7E14BC5AC4AD65.idx  tls_parser.cpp.3EA5A7AFDF40A279.idx  tls_parser.h.5616E43F60F7943A.idx
config/: blocked_domains.txt  blocked_ips.txt
include/: dns_parser.h  http_parser.h  logger.h  packet_capture.h  packet_parser.h  policy_engine.h  protocols.h  tls_parser.h
src/: dns_parser.cpp  http_parser.cpp  logger.cpp  main.cpp  packet_capture.cpp  packet_parser.cpp  policy_engine.cpp  tls_parser.cpp
